  * Incluida vista xls para proveedores y clientes
  * Evita aviso de pago si la factura tiene importe = 0
  * Validaciones de datos en pagos
  * Permitir pagos negativos (para devoluciones)
  * Fija la posicion del plugin de calendario
  * Corrige descuadre de listados (con overflow de contenido)
  * En el volcado a XLS permite meter los sublistados como hojas

2011-11-24 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.4

  * Dejamos la barra de menu siempre visible
  * Ordenamos la salida de albaranes en deposito por fecha de devolucion
  * Los descuentos por acumulado se aplican en todos los productos
  * Incluido plugin spreadsheet_on_rails
  * Incluidos helpers para exportacion a xls de listados
  * Caja de avisos
  * Retoques en la info de paginado
  * Esportacion parcial a xls (sin sublistados) para facturas

2011-09-21 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.3

  * Impedimos el borrado de clientes o proveedores que tengan
    albaranes creados
  * Mecanismo de descuento para uso de credito acumulado

2011-07-25 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.2

  * Problema con calendar_date_select en ventanas modales
  * Correccion del fichero de configuracion de bbdd para backups

2011-07-19 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.1

  * Cambios en traduccion de fechas
  * Fecha por defecto para nuevos albaranes
  * Eliminada carga de gema de calendar_date_select

2011-07-19 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9

  * Actualizar credito de cliente en ventas/devoluciones
  * Selector javascript (calendar_date_select) para fechas
  * Uso de traducciones I18n
  * Desglose por tipos de iva soportado y repercutido en informe de
    posicion global

2011-07-03 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.8

  * Spinner activado para sublistados
  * Productos en deposito para seccion Productos
  * Generación de albaranes de reposición para productos en deposito