@@ -14,7 +14,7 @@ class ProveedorController < ApplicationController
       format.xls do
         @tipo = "proveedores"
         @objetos = @proveedores
-        @subhoja = { :titulo => "nombre", :cabecera => "Productos Comprados", :objetos => "productos_comprados", :tipo => "productos_comprados" } 
+        #@subhoja = { :titulo => "nombre", :cabecera => "Productos Comprados", :objetos => "productos_comprados", :tipo => "productos_comprados" } 
         render 'comunes_xls/listado', :layout => false
       end
     end
@@ -44,8 +44,20 @@ class ProveedorController < ApplicationController
     proveedor = Proveedor.find_by_id(params[:id]) if params[:id]
     @lineas = proveedor.productos_comprados if proveedor
     #puts "--------------->" + @lineas.to_s
-    render :update do |page|
-      page.replace_html params[:update], :partial => "productos"
+    @formato_xls = true
+    respond_to do |format|
+      format.xls do
+        @tipo = "productos_comprados"
+        @objetos = @lineas
+        @xls_title = "Productos"
+        @xls_head = "Productos Comprados " + proveedor.nombre
+        render 'comunes_xls/listado', :layout => false
+      end 
+      format.html do
+        render :update do |page|
+          page.replace_html params[:update], :partial => "productos"
+        end
+      end
     end
   end
 
