@@ -11,6 +11,7 @@
   * Fija la posicion del plugin de calendario
   * Corrige descuadre de listados (con overflow de contenido)
   * En el volcado a XLS permite meter los sublistados como hojas
+  * Volcado a XLS de sublistados (lineas de albaran)
 
 2011-11-24 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.4
 
